# cryptocurrency-exchange

./: README.md
crypto-exchange-app/: .gitignore  Cargo.toml  diesel.toml
crypto-exchange-app/migrations/2025-04-30-144631_create_users/: up.sql
crypto-exchange-app/migrations/2025-04-30-144742_create_user_verifications/: down.sql  up.sql
crypto-exchange-app/migrations/2025-04-30-144821_add_id_document_fields/: down.sql  up.sql
crypto-exchange-app/migrations/2025-05-14-134437_add_is_admin_column/: down.sql  up.sql
crypto-exchange-app/migrations/2025-05-16-125405_create_password_reset_tokens/: down.sql  up.sql
crypto-exchange-app/src/: auth.rs  db.rs  email.rs  main.rs  markets.rs  models.rs  schema.rs
crypto-exchange-app/uploads/: .htaccess
crypto-exchange-client/: package-lock.json  package.json
crypto-exchange-client/public/: index.html
crypto-exchange-client/src/: App.js
crypto-exchange-client/src/components/: About.js  AdminPanel.css  AdminPanel.js  Dashboard.css  Dashboard.js  DocumentUpload.css  DocumentUpload.js  Login.css  Login.js  Markets.css  Markets.js  Privacy.js  ResetPassword.js  Settings.css  Settings.js  SignUp.css  SignUp.js  StaticPages.css  Support.js  Terms.js  UserManagement.css  UserManagement.js  VerificationQueue.css  VerificationQueue.js  VerifyIdentity.css  VerifyIdentity.js
